feat: 恢复kitchen carrot的兼容  - refactor: 小范围重构MaidRecipeManager  - feat: 恢复kitchen carrot的建通  - chore: 清理部分无用代码